*Empty MediaWiki Message*

--- a/Iowa.mw
+++ b/Iowa.mw
@@ -25,6 +25,25 @@ Iowa steyt 26. up de [[lyste van VS-ståten en gebeden når uppervlak]] en 30. u
 
 Höyvdstad [[Des Moines]] hevt ouk medeyne de meyste inwoaners van den ståt. Een deyl van et steadelik gebeed rund de stad [[Omaha]] in den angrensenden ståt [[Nebraska]] löpt döär töt in et süüdwesten van Iowa.<ref>[https://census.gov/data/tables/time-series/demo/popest/2010s-total-metro-and-micro-statistical-areas.html United States Census Bureau. "Metropolitan and Micropolitan Statistical Areas Population Totals: 2010-2018".] Bekeaken up 7 juni 2019.</ref> Iowa steyt te book as eyne van de veiligste ståten üm te woanen.<ref>[http://www.insurancejournal.com/news/national/2009/03/25/99012.htm?print=1 Insurance Journal. "N.H. Receives Lowest Crime Ranking; Nevada Ranks as Worst State". Wells Publishing 25 maert 2009.] 8 augustus 2009.</ref>
 
+==Naam==
+Den ståt danket syne naam an de [[Ioway]], ne stamme van [[Inheemse Amerikanen|inheymske amerikanen]].
+
+==Landsbeskryving==
+Iowa ligt tüsken veer[[rivier|rivyren]]: de [[Mississippi (rivyr)|Mississippi]], de [[Groute Sioux-rivyr]] en de [[Missouri (rivyr)|Missouri]]. De süüdgrense is de [[Des Moines (rivyr)|Des Moinesrivyr]]. Iowa hevt 99 gråfskappen.
+
+===Geology en terrein===
+Iowa is meyst höyvelachtig. In et westen van den ståt sit vöäle [[löss]] in de grund. Up et noorden an wordet de höyvels wat bargachtiger. Den ståt hevt meyrdere natuurlike mearen: [[Geystemear]], et [[Oustokobojimear|oust-]] en [[westokobojimear]], in et noordwesten. Wydters gevt et noch een paar kunstmåtige mearen.
+
+===Landskap, begroiing en deers===
+Med 60% van et totale uppervlak is et gröätste deyl van Iowa [[landbouw|burenland]]. Up höygere stükke is vöäle [[prairie]] en [[savanne]] (ne mengeling van grösland en böyme). Et noorden van den ståt wördt vake rekkend by de [[Great Plains]] (Groute Vlakte).
+
+In de ståt groit vöäral [[langgrösprairie]]. Van de olde prairie-[[morre]]landen is noch mär 5% oaver. Ouk et meyste van et oarsprunglike wold is vord.
+
+Der leavt een paar bedreigde deersoorten in Iowa: den [[dwargstern]], [[dwargpyper]], [[indianavleadermuus]], [[witte störe]], [[iowaanske landslakke]], [[Higginsougmussel]] en de [[Topeka-skyner]]. Bedreigde plantensoorten sint verskeidene [[orchidee]]n, Mead's köäningsblome, prairiebuskklåver en Noordelike Blaue Monnikskappe.
+
+===Klimaat===
+Iowa hevt een vuchtig landklimaat, wårin as et unmündig heate en unmündig kold worden kan. In Des Moines is de döärsneyde jårtemperatuur 10 °C. Den winterdag is et kold en gevt et vöäle [[sney]].
+
 ==Literatuurverwysingen==
 <references/>
 
