--- a/Iowa.mw
+++ b/Iowa.mw
@@ -42,7 +42,7 @@ In de ståt groit vöäral [[langgrösprairie]]. Van de olde prairie-[[morre]]la
 Der leavt een paar bedreigde deersoorten in Iowa: den [[dwargstern]], [[dwargpyper]], [[indianavleadermuus]], [[witte störe]], [[iowaanske landslakke]], [[Higginsougmussel]] en de [[Topeka-skyner]]. Bedreigde plantensoorten sint verskeidene [[orchidee]]n, Mead's köäningsblome, prairiebuskklåver en Noordelike Blaue Monnikskappe.
 
 ===Klimaat===
-Iowa hevt een vuchtig landklimaat, wårin as et unmündig heate en unmündig kold worden kan. In Des Moines is de döärsneyde jårtemperatuur 10 °C. Den winterdag is et kold en gevt et vöäle [[sney]].
+Iowa hevt een vuchtig landklimaat, wårin as et 's soamers unmündig heate en 's winters unmündig kold worden kan. In Des Moines is de döärsneyde jårtemperatuur 10 °C. Den winterdag is et kold en gevt et vöäle [[sney]].
 
 ==Literatuurverwysingen==
 <references/>
