--- a/Iowa.mw
+++ b/Iowa.mw
@@ -49,7 +49,7 @@ In et vöärjår kümt der meystyds swår weader. Der sint in döärsneyde 50 st
 Iowaanske soamers sint heate en vuchtig. Temperaturen ligget rund de 32 °C en uutsketers når 38 °C koamet noch wal es vöär. De winters kan et -28 °C worden. Et heatste ooit emeaten in den ståt is 48 °C, et köldste -44 °C.
 
 {| class="wikitable sortable" "text-align: center; font-size: 90%;"
-|+ Monthly normal high and low temperatures for various Iowa cities (°F)<ref>{{cite web|url=http://www.ustravelweather.com/iowa/|title=Iowa Weather-Iowa Weather Forecast-Iowa Climate|website=ustravelweather.com|access-date=February 17, 2011|archive-url=https://web.archive.org/web/20110131181314/http://www.ustravelweather.com/iowa/|archive-date=January 31, 2011|url-status=dead|df=mdy-all}}</ref>
+|+ Minimum en maximum temperaturen vöär verskillende iowaanske steaden (°F)
 |-
 ! style="background:#e5afaa;" | Stad
 ! style="background:#e5afaa;" | Jan
