--- a/Ziepe_(reiniging).mw
+++ b/Ziepe_(reiniging).mw
@@ -7,6 +7,7 @@ Behalven ziepe bevatten zieptebletten in de meeste gevallen ok hulpstoffen zoas 
 * [[Drèents]]: ''zaip{{small()|e}}'', ''zeeip'', ''zeip'', ''zepe'', ''ziep{{small()|e}}''
 * [[Grunnegs]]: ''zaip'', ''zaibe''
 * [[Stellingwarfs]]: ''ziepe''
+*[[Urkers]]: ''ziep''
 * [[Veluws]]: ''zeep, zepe''
 
 [[Kategorie:Stellingwarfs artikel]]
