--- a/Hond.mw
+++ b/Hond.mw
@@ -1,30 +1,3 @@
-[[Bestaand:German Pinscher.JPG|250px|thumb|Nen Duutsen Pinscher]]
-[[Bestaand:060414 Puppy.jpg|thumb|250px|'t Jong van nen hond (5 wekke olden Duutsen Schäferhond)]]
-De '''hond''' ([[Latien]]: ''Canis lupus familiaris'') is n roofdeer uut de femilie van de [[hondachtigen]] (''Canidae''). Et deer kump op alle wealddelen veur, meestentieds in gezelschap van [[mense]]n, dit kump deurdat den hond et oldst bekende huusdeer is. Al duzenden jaoren wöd den hond gebruukt veur bewakingstaken, bi-j de jacht, as herderhond en as trekdeer. Nog altied hef den hond wark as politiehond of hulphond, moar de meeste honden wodt now eholden as gezelschapsdeer en bint dan ok ene van de meestveurkommende deren in [[Europa (continent)|Europa]].
-
-De hond stamt of van de [[wolf]]. Der bint duzende verschillende soorten hunde, um der moar n paar te neumen: den [[Golden Retriever]], den [[Border collie]], den [[Huskie]], den [[Poedel]] en den [[Rotweiler]]. 
-
-== Nedersaksisch ==
-* [[Achterhooks]]: ''hond'' (meervold ''hunde'', verkleinvörm ''hundjen'', ''hund(e)ken'')
-* [[Drèents]]: ''hond'' (meervold ''honden'', verkleinvörm ''hondtie(n)'')
-* [[Graafschopper Platt]]: ''hound'' (Platduutse schriefwieze ''Hound'')
-* [[Grunnegs]] ''dog'', ''hound'', ''hond'' <small>(oetsproken as ''hoand'')</small>
-* [[Sallaands]]: ''hond'' (meervold ''honden'', verkleinvörmen ''hunnechie(n)'', ''(h)undtie'', ''höndtie(n)'')
-* [[Stellingwarfs]]: ''hond'' (meervold ''honnen'', verkleinvörm ''hontien'')
-* [[Tweants]]: 
-** ''hoond''
-** ''fok'' (skeeldn)
-** ''skeffer (-tjen)'' (kleain heundken, kan ook negatief wean)
-* [[Urkers]]: ''hoend''
-* [[Veluws]]: 
-** ''hond''
-** ''hoend'' ([[Putten]], [[Niekark]], [[Barreveld (daarp)|Barreveld]])
-** ''hongd'' ([[Bunsjoten]])
-** ''ond'' ([[Attem]])
-
-== Oetgaonde verwiezingen ==
-{{Commonscat|Dogs}}
-{{Wiktionary|hond}}
-
+== een hond is geen kat ==
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Zoogdier]]
