Wysigingen döär [[Special:Contributions/87.211.48.182|87.211.48.182]] ([[User talk:87.211.48.182|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Wwikix|Wwikix]]

--- a/Ruïne_van_Teylingen.mw
+++ b/Ruïne_van_Teylingen.mw
@@ -1,21 +1,21 @@
 [[Ofbeelding:Teylingen_binnen.jpg|thumb|right|200px|De ruïne van Teylingen in 2007]]
-[[Ofbeelding:Voorhout_ringburcht.jpg|thumb|200px|Teylingen in oude staat]]
-'''Slot Teylingen''' is gelegen in buurtschap [[Teijlingen (gehucht)|Teijlingen]] in de kern [[Veurholt|Voorhout]] van de [[Zuud-Hollaand|Zuid-Holland]]se gemeente [[Teylingen]], aan de grens met de kern [[Sassenheim]].
+[[Ofbeelding:Voorhout_ringburcht.jpg|thumb|200px|Teylingen in olden stoat]]
+'''Slot Teylingen''' is eleagen in buurtschop [[Teijlingen (gehucht)|Teijlingen]] in de kern [[Veurholt]] van de [[Zuud-Hollaand]]se gemeente [[Teylingen]], an de grenze mit de kern [[Sassenheim]].
 
-Van oorsprong werd het slot gebouwd om den noord-zuid weg te beschermen in [[Graofschap Hollaand|Hollands]] staatsgebied. Later werd het een houtvesterslot voor de houtvesterij van de Graven van Holland, te beginnen met Graaf [[Willem IV van Hollaand|Willem IV van Holland]].
+Van eursprong wierd et slot ebouwd um den noord-zuud weg te bescharmen in [[Graofschap Hollaand|Hollaands]] stoatsgebeed. Later wodden et n holtvesterslot veur de holtvesteri-je van de Graven van Hollaand, te beginnen mit Graaf [[Willem IV van Hollaand]].
 
-Een van de bekendste bewoners van het slot, die daar ook is overleden, was [[Jacoba van Beieren]]. De in de omgeving van het slot opgegraven drinkkannen worden ook wal [[Jacobakennekes|Jakobakannetjes]] genoemd.
+Ene van de bekendste bewonners van et slot, dee doar ok is oaverleaden, was [[Jacoba van Beieren]]. De in de umgaeving van et slot opegroaven drinkkennekes wödden ok wal [[Jacobakennekes]] eneumd.
 
-Van het slot is alleen nog een ruïne over. Deze is goed bewaard, bestaat uit een ringmuur en een [[Donjon]] waarvan de ringmuur deel uitmaakt en is deels door water omgeven. Het kasteel is een ronde water[[burcht]]. De ringmuur komt uit het begin van de 13de eeuw en het woonhuis van kort daarna. Het kasteel is in den [[Tachtigjoarigen Oorlog|Tachtigjarige Oorlog]] rondom 1570 zwaar beschadigd en daarna deels weer opgebouwd. Het had ook een [[veurburcht|voorburcht]]. Omstreeks 1675 is de donjon uitgebrand, waarna verval intrad en delen gesloopt werden. In [[1889]] is het door Jhr. Mr. W. van Teylingen aan de Staat verkocht, die nog steeds eigenaar is. Eind 1900 is de ruïne opgeknapt en is de toegangspoort weer opgebouwd.   
+Van et slot is noe alleneg nog ne ruïne oaver. Dizzen is good bewoard, besteet uut ne ringmure en nen [[Donjon]] woarvan de ringmure deel uutmek en is deels deur water umgeaven. Et kasteel is nen ronden water[[burcht]]. De ringmure kump uut et beginne van de 13de eeuwe en et wonhuus van kort doarnoa. Et kasteel is in den [[Tachtigjoarigen Oorlog]] rundumme 1570 zwoar beschadigd en doarnoa deels weer op-ebouwd. Et had ok nen [[veurburcht]]. Umstreaks 1675 is den donjon uut-ebrand, woarnoa vervalle intrad en delen esloopt wödden. In [[1889]] is et deur Jhr. Mr. W. van Teylingen an den Stoat verkocht, dee nog steeds eigenoar is. End 1900 is de ruïne op-eknapt en is de toogängspoorte wier op-ebouwd.   
 
-Het is vermoedelijk het stamslot van de adellijke familie [[Van Teylingen]], waar de familie [[Van Brederode]] rechtstreeks van afstamt.
+Het is vermeudelek et stamslot van de adelleke femilie [[Van Teylingen]], woar de femilie [[Van Brederode]] rechtstreaks van afstamt.
 
-De Gemeente Teylingen is vernoemd naar dit slot, mede omdat de naam [[Teijlingen (gehucht)|Teylingen]] ook al voorkwam in de drie voormalige gemeenten [[Sassenheim]], [[Veurholt|Voorhout]] en [[Warmond]].
+De Gemeente Teylingen is verneumd noar dit slot, mit umdat den name [[Teijlingen (gehucht)|Teylingen]] ok al veurkwam in de dree veurmoalege gemeenten [[Sassenheim]], [[Veurholt]] en [[Warmond]].
 
 == Bassie en Adriaan ==
-In de serie [[Bassie en Adriaan]]: De Verdwenen Kroon ([[1988]]) krop et gannef den Baron, B2 en Vlugge Japie vort in dit slot, reden waarom door veel gefilmd worden in het kasteel.
+In de riege [[Bassie en Adriaan]]: De Verdweanen Krone ([[1988]]) krop et gannef den Baron, B2 en Vlugge Japie vort in dit slot, reden woarum doar veul efilmd wodden in et kasteel.
 
-== Uitgaande verwijzingen ==
+== Uutgoande verwiezingen ==
 [http://www.kastelenhollandzeeland.nl/teylingen.htm Teylingen op kastelenhollandzeeland.nl]
 
 {{DEFAULTSORT:Ruine Van Teylingen}}
