--- a/Jannie_Stalknecht.mw
+++ b/Jannie_Stalknecht.mw
@@ -5,7 +5,7 @@ Jannie Stalknecht wer geboren in de Stad-Grunneger Oosterpoortwiek as dochter va
 
 Via haar bruier leerde Jannie heur man Jan Groenendal (1925-1994) kennen, dij trompet speulde en veurzitter was van de ''Groninger Jazz Sociëteit''. Zai traauwden in 1954. Pas in feberwoarie 1960 trad Jannie noar boeten as zangeres van t ensemble ''De Thrianta's'', onder laaiden van radiomoaker Tonny M. van der Veen. Zie wazzen sikkom wekelks te heuren op de VARA-radio. In maai 1960 wer de televisietoren Smilde officieel opend. Ter gelegenhaid doarvan wer deur de NTS, in soamenwaarken mit de RONO, n tv-pergram oetzonden vanoet de Prins Bernhardhoeve in Zuudloaren. Tiedens dij oetzenden zong Stalknecht mit ''De Thrianta's''.
 
-Echtgenoot Jan Groenendal vertoalde körte tied loater t nummer ''Lover come back to me'' in t Grunnegs. t Nummer was eerder zongen deur o.m. Billie Holiday en Ella Fitzgerald. Jannie zong t as ''Laiverd, kom weer bie mij'' in Van der Veen zien radiopergram, woarnoa ploatenmoatschoppij CNR kontakt mit heur opnam. Gaauwachteg werren nog drij nummers vertoald, woaronder ''Bei mir bist du schön'' van The Andrews Sisters en ''Sentimental Journey'' van Doris Day. t Gehail wer opnomen in de Grunneger Remonstrantse kerk en in de zummer van 1960 oetbrocht op de EP ''Martina zingt bie Martini'', woarop ze begelaaid wer deur t Roelof Stalknecht Trio. De ploatenmoatschoppij vruig t pebliek oet te vinden wèl achter de noam 'Martina' schoel ging en loofde doar priezen veur oet. 'Martina', kreeg landelke bekendhaid mit ''Laiverd Kom Weer Bie Mie'' en ''Allain is moar allain''. Jannie bleef der nuchter onder en nam zangles. Der wazzen plannen om onder aigen noam Engelstoalege nummers oet te brengen, mor dat is der nait van kommen. In 1974 wer n Grunnegstoaleg verzoamelalbum oetbrocht deur Philips, mit doarop twij nummers van Jannie Stalknecht, vernijs begelaaid deur t trio van heur bruier. Heur nummers worden ook wel deur aander Grunnegen zangeressen vertolkt.
+Echtgenoot Jan Groenendal vertoalde körte tied loater t nummer ''Lover come back to me'' in t Grunnegs. t Nummer was eerder zongen deur o.m. Billie Holiday en Ella Fitzgerald. Jannie zong t as ''Laiverd, kom weer bie mij'' in Van der Veen zien radiopergram, woarnoa ploatenmoatschoppij CNR kontakt mit heur opnam. Gaauwachteg werren nog drij nummers vertoald, woaronder ''Bei mir bist du schön'' van The Andrews Sisters en ''Sentimental Journey'' van Doris Day. t Gehail wer opnomen in de Grunneger Remonstrantse kerk en in de zummer van 1960 oetbrocht op de EP ''Martina zingt bie Martini'', woarop ze begelaaid wer deur t Roelof Stalknecht Trio. De ploatenmoatschoppij vruig t pebliek oet te vinden wèl achter de noam 'Martina' schoel ging en loofde doar priezen veur oet. 'Martina', kreeg landelke bekendhaid mit ''Laiverd Kom Weer Bie Mie'' en ''Allain is moar allain''. Jannie bleef der nuchter onder en nam zangles. Der wazzen plannen om onder aigen noam Engelstoalege nummers oet te brengen, mor dat is der nait van kommen. In 1974 wer n Grunnegstoaleg verzoamelalbum oetbrocht deur Philips, mit doarop twij nummers van Jannie Stalknecht, vernijs begelaaid deur t trio van heur bruier. Heur nummers worden ook wel deur aander Grunnegen artiesten vertolkt.
 
 Jannie Stalknecht kwam oet tied in 2017, op 88-joarege leeftied. Zai is opnomen in de ''Groninger'' ''Vrouwengalerij'', n initiatief van ''De Verhalen van Groningen'' oet 2019.
 
