/* Tydlyn van incidenten */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -240,17 +240,17 @@ In öären tyd toosammen as teammåten wön Hamilton twey werldtitels en Rosberg
 [[File:Mercedes_duo_2013_Malaysia.jpg|links|duum|Rosberg wyr verplichted üm achter Hamilton too blyven in den Grouten Prys van Maleysie van 2013, et eyrsten van vele kontroversiele incidenten up de båne.]]
 
 ==== Tydlyn van incidenten ====
-The first sign of tensions between the pair was at the [//en.wikipedia.org/wiki/2013_Malaysian_Grand_Prix 2013 Malaysian Grand Prix], where Mercedes implemented team orders, telling the quicker Rosberg to hold station behind Hamilton in fourth place to which Rosberg reluctantly obliged. Hamilton questioned the radio call and after the race admitted Rosberg had deserved the final spot on the podium. The incident, drowned out in the subsequent days by the [//en.wikipedia.org/wiki/2013_Malaysian_Grand_Prix%23Race "Multi-21"] saga at Red Bull, passed by without further controversy as the two friends moved on.<ref>{{Cite web|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/9951092/Malaysian-Grand-Prix-2013-Lewis-Hamilton-benefits-from-team-orders-as-Niko-Rosberg-fumes.html|title=Malaysian Grand Prix 2013: Lewis Hamilton benefits from team orders as Niko Rosberg fumes|date=24 March 2013|work=The Telegraph|access-date=9 August 2017|language=en-GB}}</ref>
+Et eyrsten teaken van spanningen tüsken de twey wyr by den Grouten Prys van Maleysie van 2013, wår Mercedes nen teamupdracht gav, wårby den rapperen Rosberg achter Hamilton up de veerde plåtse (stille) mos blyven (stå ), watfRosberg med teagensinne deed. Hamilton betwyveleden en bekritisereden den radiouproop en gav nå de race too dat Rosberg de darde plåtse verdeend had.  Et incident wyr in de völgende dågen upelosten med den "Multi-21" by Red Bull en ging vöärby sonder wydere kontroversy terwyl de twey måten wyder gingen.
 
-At the [//en.wikipedia.org/wiki/2014_Bahrain_Grand_Prix 2014 Bahrain Grand Prix], both the Mercedes drivers engaged in a wheel-to-wheel duel for the win. A late safety car had seemingly swung the favour to second-place Rosberg, who had the benefit of being on a better tyre, but after the restart Hamilton held firm in a close wheel-to-wheel encounter which passed without the Mercedes cars making contact. In [//en.wikipedia.org/wiki/Parc_ferme parc ferme] after the race the pair engaged in a mock fight.<ref name="auto" /> Mercedes was praised for allowing its drivers to race. However, it later emerged Rosberg had used engine modes banned by Mercedes to give himself a power advantage over Hamilton in the closing laps.<ref name="auto12">{{Cite web|url=http://en.espn.co.uk/f1/motorsport/story/184267.html|title=How Hamilton won the 2014 world title|date=23 November 2014|work=ESPN|access-date=10 August 2017|language=en-GB}}</ref>
+By den Grouten Prys van Bahrein van 2014 wyren beyde Mercedeskoureurs betrökken by nen wyl-an-wylduel vöär de oaverwinning. Nen låten safety car had blykbar et vöärdeyl egeaven an Rosberg up de tweyde plåtse, den et vóärdeyl van nen betteren band had, mår nå de hervatting setteden Hamilton drük in ne byna wyl-an-wylanraking dee sonder warkelik konkakt tüsken de Mercedeswågen vöärby ging. In de aveslöäten ruumte nå de race deden de twey med an nen (spottend) nåmåkgevecht. 
 
-Hamilton arrived at the [//en.wikipedia.org/wiki/2014_Spanish_Grand_Prix Spanish Grand Prix] with three consecutive victories behind him and the opportunity to move ahead of Rosberg in the championship with win number four. Hamilton held off a charging Rosberg late in the race, crossing the line just 0.6s ahead of the German. On a track with more overtaking opportunities, Rosberg may have been able to pass and after the race said an extra lap would have been enough.<ref name="auto" /> It was revealed after the race that Hamilton had used the same engine mode to defend position that Rosberg had used in Bahrain.<ref name="auto12" />
+Hamilton kwam an by den Grouten Prys van Spanje van 2014 med dree upeynvölgende oaverwinningen achter sich en de möägelikheyd um in et kampioonskap vöär Rosberg too kommen med syne veerde oaverwinning. Hamilton heeld nen achtervulgende Rosberg av an et ende van de race en kwam 0.6 sekunden eyrder oaver de streyp as den düütsker. Up nen båne med meyr móägelikheyden tót inhvlen was Rosberg misskyn in ståt ewest üm in too hålen en den sei nå race dat ne ekstra runde enog ewest was. Nå de race wyr bekend emåked dat Hamilton desölvde motorinstelling had ebruked üm syne positsy too verdeadigen as Rosberg had edåne in Bahrein.
 
-Two weeks later, at the [//en.wikipedia.org/wiki/2014_Monaco_Grand_Prix Monaco Grand Prix], Hamilton was faster than his teammate in all three practice sessions and again in Q2 ahead of the top-ten shootout. In the closing stages of Q3, both Mercedes drivers started a lap; Rosberg first, Hamilton second. Rosberg, on provisional pole, ran deep at Mirabeau and drove into a sliproad, prompting yellow flags and forcing Hamilton to abort his final qualifying lap. Several pundits made suggestions of foul play and drew comparisons with Michael Schumacher's deliberate crash at La Rascasse in 2006, but the stewards cleared Rosberg of any wrongdoing. Hamilton made clear that he felt Rosberg had ruined his lap on purpose and, after starting and finishing the race second, announced that he and Rosberg were no longer friends.<ref>{{Cite web|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/10853857/Monaco-Grand-Prix-2014-Nico-Rosberg-breaks-Lewis-Hamiltons-stranglehold-to-take-pole-in-thrilling-qualifying.html|title=Nico Rosberg breaks Lewis Hamilton's stranglehold to take pole in thrilling qualifying|date=24 May 2014|work=The Telegraph|access-date=10 August 2017|language=en-GB}}</ref>
-[[File:First_lap_2014_Bahrain_Grand_Prix_(3).jpg|rechts|duum|The start of the [//en.wikipedia.org/wiki/2014_Bahrain_Grand_Prix 2014 Bahrain Grand Prix] where Hamilton passed teammate Rosberg for the lead.]]
-In [//en.wikipedia.org/wiki/2014_Hungarian_Grand_Prix Hungary], Hamilton was forced to start from the back of the grid when a fuel leak set his car alight in the first session of qualifying. Hamilton began to fight through the field before a mid-race safety car shuffled the order, putting Rosberg behind Hamilton but on a different strategy. When Rosberg, on fresher tires, closed the gap to Hamilton, Mercedes asked the British driver to move over, knowing the German would have to pit again before the end of the race.<ref name="auto" /> Hamilton refused, reasoning that he had battled through from last position and that he was not prepared to slow down to let Rosberg, his title rival who had started from pole position, through. Hamilton's decision meant he held on to third, keeping Rosberg at bay in the final stages after his pit stop. Mercedes chairman, [//en.wikipedia.org/wiki/Niki_Lauda Niki Lauda] spoke in support of Hamilton after the race, saying "From my point of view Lewis was right".<ref name="auto12" />
+Twey weaken låter by den Grouten Prys van Monako van 2014, was Hamilton rapper as synen teammåt in alle dree uvensessys en ok in de tweyde kwalifikatsy vöär binnen de låtste tyn. In et låtste deyl van de darde kwalifikatsy begönnen beyde Mercedeskoureurs an ne runde; eyrst Rosberg, dårnå Hamilton. Rosberg, den up de eyrste positsy lag, ging wyd by Mirabeau en reed in ne sydebåne, wat töt geale vlaggen leideden en wårdöär Hamilton syne låtste runde van syne kwalifikatsy av mos brekken. Meyrdere eksperts deden suggestys van vüül spel en måkeden vergelykingen med de upsettelike botsing van Michael schumacher by La Rascasse in 2006, mår de jüry vrywåreden Rosberg van eynigen fout. Hamilton måkeden düdelik dat hy vuuleden dat Rosberg syne runde ekspres had verpested en nådat hy de race as tweyden was begönnen en as tweyden had beendiged, kondigeden hy an dat hy en Rosberg neet langer måten warens.
+[[File:First_lap_2014_Bahrain_Grand_Prix_(3).jpg|rechts|duum|Den start van den Grouten Prys van Bahrein van 2014 wår Hamilton synen teammåt Rosberg inhåleden vöär de leiding.]]
+In den Grouten Prys van Hungarye van 2014 wyr Hamilton edwungen üm vanav de achterkante van et startveld too starten ümdat nen brandstovlek in de eyrste kwalifikatsysessy synen wågen untbrandeden. Hamilton begön döär et veld når vöären too kommen tötdat nen safety car midden in de race de volgorde verandereden, wårdóär Rosberg achter Hamilton kwam mår med ne andere strategy. Doo Rosberg, up nyere banden, et gat når Hamilton dichteden, vrog Mercedes den britsken koureur üm hem oaver too låten nemmen, weatende dat den düütsker vöär et ende van de race noch nen pitstop måken sül mooten. Hamilton weigereden, wårby hy redenereden dat hy vanav de låtste positsy når vöären was ekommen en dat hy der neet klår vöär was üm too vertrågen üm Rosberg, synen titelrivål den up de eyrste positsy was begönnen, derdöär too låten. De beslissing van Hamilton beteakeneden dat hy up de darde plåtse blev en dat hy Rosberg up achterstand heeld an et ende van de race nå den låtsten pitstop. Mercedesvöärsitter Niki Lauda sprak synen steun uut vöär Hamilton nå de race en sei "Völgens myn had Lewis gelyk".
 
-The two made contact at the [//en.wikipedia.org/wiki/2014_Belgian_Grand_Prix 2014 Belgian Grand Prix], where Rosberg was widely criticised for hitting Hamilton at Les Combes, breaking his front wing and giving his teammate a puncture and effectively putting him out of the race. Rosberg would recover to finish second behind Daniel Ricciardo but it later emerged the German had left the nose of his car in to "prove a point" to his British teammate by not backing out. After being booed on the podium, Rosberg was forced to apologise and "suitable disciplinary measures" were taken against him.<ref name="auto12" />
+De twey måkeden kontakt by den Grouten Prys van Belgie van 2014, wår Rosberg wyd bekritisered wyr vöär et raken van Hamilton by Les Combes, wårby hy synen vöärvlöggel brak en synen teammåt nen lekken band gav en hem feitelik uut de race düweden. Rosberg herstelleden sich üm tweyds too endigen achter Daniel Ricciardo mår et blek låter dat den düütsker de nöse van synen wågen had elåten üm "nen pünt too måken" når synen britsken teammåt döär neet up too geaven. Nådat hy döär et publyk untmudiged wyr up et podium, wyr Rosberg edwungen üm eksküses an too byden enwas forced to apologise and "epaste diskiplinäre måtreagelen" wyr enömmen teagen hem.
 
 The next season Hamilton came to the [//en.wikipedia.org/wiki/2015_United_States_Grand_Prix 2015 United States Grand Prix] knowing he could win the title with three races to spare if he claimed victory. After Hamilton very aggressively forced Rosberg wide at Turn 1 to claim the lead, a thrilling race unfolded where the advantage continuously swung between both Mercedes drivers and the chasing Red Bulls. A fired-up Rosberg led in the closing stages but made a mistake at Turn 12, running deep and letting his teammate through a handful of laps from the flag. Hamilton never relinquished the lead and claimed his third championship. Rosberg was furious after the race, saying his teammate's Turn 1 move had been "one step too far". He infamously threw his podium cap at Hamilton as they waited to take the podium.<ref name="auto12" />
 
