/* Tydlyn van incidenten */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -250,7 +250,7 @@ Twey weaken låter by den Grouten Prys van Monako van 2014, was Hamilton rapper 
 [[File:First_lap_2014_Bahrain_Grand_Prix_(3).jpg|rechts|duum|Den start van den Grouten Prys van Bahrein van 2014 wår Hamilton synen teammåt Rosberg inhåleden vöär de leiding.]]
 In den Grouten Prys van Hungarye van 2014 wyr Hamilton edwungen üm vanav de achterkante van et startveld too starten ümdat nen brandstovlek in de eyrste kwalifikatsysessy synen wågen untbrandeden. Hamilton begön döär et veld når vöären too kommen tötdat nen safety car midden in de race de volgorde verandereden, wårdóär Rosberg achter Hamilton kwam mår med ne andere strategy. Doo Rosberg, up nyere banden, et gat når Hamilton dichteden, vrog Mercedes den britsken koureur üm hem oaver too låten nemmen, weatende dat den düütsker vöär et ende van de race noch nen pitstop måken sül mooten. Hamilton weigereden, wårby hy redenereden dat hy vanav de låtste positsy når vöären was ekommen en dat hy der neet klår vöär was üm too vertrågen üm Rosberg, synen titelrivål den up de eyrste positsy was begönnen, derdöär too låten. De beslissing van Hamilton beteakeneden dat hy up de darde plåtse blev en dat hy Rosberg up achterstand heeld an et ende van de race nå den låtsten pitstop. Mercedesvöärsitter Niki Lauda sprak synen steun uut vöär Hamilton nå de race en sei "Völgens myn had Lewis gelyk".
 
-De twey måkeden kontakt by den Grouten Prys van Belgie van 2014, wår Rosberg wyd bekritisered wyr vöär et raken van Hamilton by Les Combes, wårby hy synen vöärvlöggel brak en synen teammåt nen lekken band gav en hem feitelik uut de race düweden. Rosberg herstelleden sich üm tweyds too endigen achter Daniel Ricciardo mår et blek låter dat den düütsker de nöse van synen wågen had elåten üm "nen pünt too måken" når synen britsken teammåt döär neet up too geaven. Nådat hy döär et publyk untmudiged wyr up et podium, wyr Rosberg edwungen üm eksküses an too byden enwas forced to apologise and "epaste diskiplinäre måtreagelen" wyr enömmen teagen hem.
+De twey måkeden kontakt by den Grouten Prys van Belgie van 2014, wår Rosberg wyd bekritisered wyr vöär et raken van Hamilton by Les Combes, wårby hy synen vöärvlöggel brak en synen teammåt nen lekken band gav en hem feitelik uut de race düweden. Rosberg herstelleden sich üm tweyds too endigen achter Daniel Ricciardo mår et blek låter dat den düütsker de nöse van synen wågen had elåten üm "nen pünt too måken" når synen britsken teammåt döär neet up too geaven. Nådat hy döär et publyk untmudiged wyr up et podium, wyr Rosberg edwungen üm eksküses an too byden en "epaste diskiplinäre måtreagelen" wyren enömmen teagen hem.
 
 The next season Hamilton came to the [//en.wikipedia.org/wiki/2015_United_States_Grand_Prix 2015 United States Grand Prix] knowing he could win the title with three races to spare if he claimed victory. After Hamilton very aggressively forced Rosberg wide at Turn 1 to claim the lead, a thrilling race unfolded where the advantage continuously swung between both Mercedes drivers and the chasing Red Bulls. A fired-up Rosberg led in the closing stages but made a mistake at Turn 12, running deep and letting his teammate through a handful of laps from the flag. Hamilton never relinquished the lead and claimed his third championship. Rosberg was furious after the race, saying his teammate's Turn 1 move had been "one step too far". He infamously threw his podium cap at Hamilton as they waited to take the podium.<ref name="auto12" />
 
