/* Tydlyn van incidenten */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -240,7 +240,7 @@ In öären tyd toosammen as teammåten wön Hamilton twey werldtitels en Rosberg
 [[File:Mercedes_duo_2013_Malaysia.jpg|links|duum|Rosberg wyr verplichted üm achter Hamilton too blyven in den Grouten Prys van Maleysie van 2013, et eyrsten van vele kontroversiele incidenten up de båne.]]
 
 ==== Tydlyn van incidenten ====
-Et eyrsten teaken van spanningen tüsken de twey wyr by den Grouten Prys van Maleysie van 2013, wår Mercedes nen teamupdracht gav, wårby den rapperen Rosberg achter Hamilton up de veerde plåtse (stille) mos blyven (stå ), watfRosberg med teagensinne deed. Hamilton betwyveleden en bekritisereden den radiouproop en gav nå de race too dat Rosberg de darde plåtse verdeend had.  Et incident wyr in de völgende dågen upelosten med den "Multi-21" by Red Bull en ging vöärby sonder wydere kontroversy terwyl de twey måten wyder gingen.
+Et eyrsten teaken van spanningen tüsken de twey wyr by den Grouten Prys van Maleysie van 2013, wår Mercedes nen teamupdracht gav, wårby den rapperen Rosberg achter Hamilton up de veerde plåtse (stille) mos blyven (stån), wat Rosberg med teagensinne deed. Hamilton betwyveleden en bekritisereden den radiouproop en gav nå de race too dat Rosberg de darde plåtse verdeend had.  Et incident wyr in de völgende dågen upelosten med den "Multi-21" by Red Bull en ging vöärby sonder wydere kontroversy terwyl de twey måten wyder gingen.
 
 By den Grouten Prys van Bahrein van 2014 wyren beyde Mercedeskoureurs betrökken by nen wyl-an-wylduel vöär de oaverwinning. Nen låten safety car had blykbar et vöärdeyl egeaven an Rosberg up de tweyde plåtse, den et vóärdeyl van nen betteren band had, mår nå de hervatting setteden Hamilton drük in ne byna wyl-an-wylanraking dee sonder warkelik konkakt tüsken de Mercedeswågen vöärby ging. In de aveslöäten ruumte nå de race deden de twey med an nen (spottend) nåmåkgevecht. 
 
