*Empty MediaWiki Message*

--- a/Taylor_Swift.mw
+++ b/Taylor_Swift.mw
@@ -7,7 +7,7 @@ Döärdat se meyr as 50 miljoon albums en 150 miljoon nummers verkocht hevt is S
 Swift hevt estån in ''[[Time (tydskrivt)|Time]]'' as eyne van de 100 meyst invloodryke lüde van de wearld (2010, 2015, 2019). Ouk stünd se boavenan in de [[Forbes Celebrity 100|''Forbes'' Celebrity 100]] (2016 en 2019). 
 
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Amerikoanse Zanger]]
+[[Kategorie: Amerikoanse zanger]]
 
 [[En:Taylor Swift]]
 [[nl:Taylor Swift]]
