*Empty MediaWiki Message*

--- a/Taylor_Swift.mw
+++ b/Taylor_Swift.mw
@@ -18,6 +18,12 @@ Döärdat se meyr as 50 miljoon albums en 150 miljoon nummers verkocht hevt is S
 
 Swift hevt estån in ''[[Time (tydskrivt)|Time]]'' as eyne van de 100 meyst invloodryke lüde van de wearld (2010, 2015, 2019). Ouk stünd se boavenan in de [[Forbes Celebrity 100|''Forbes'' Celebrity 100]] (2016 en 2019). 
 
+=== Musikstyl ===
+[[File:Phoenix-Musical Intrument Museum-Taylo Swift Les Pual guitar.jpg|upright|thumb|right|Swift syne [[Gibson Les Paul|Les Paul]]-[[gitaar]] en drådlousen mikrofoon uutestald in de Artist Gallery van et Instrumentenmuseum in Phoenix, Arizona]]
+
+In Swift syne musik sit kenmarken van [[popmusik|pop]], [[synth-pop]], [[Countrymusik|country]], [[country pop]], en [[rockmusik]]. Selv nöömden se sik countrysangeresse tötdat in 2014 öär album ''1989'' uutküm. Dat beskreav se selv as een "sonisk samenhangend popalbum."<ref>[https://www.webcitation.org/6klhMwBEm?url=http://www.tennessean.com/story/entertainment/music/peter-cooper/2014/10/26/taylor-swift-reaches-turning-point/17871775/ (archiveerd) The Tennessean. Cooper, Peter. "Taylor Swift reaches a turning point with '1989'". Skreaven up 26 october 2014.]</ref> 
+
+<references/>
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Amerikoanse zanger]]
 
