--- a/Sydenstaert.mw
+++ b/Sydenstaert.mw
@@ -4,7 +4,7 @@ De '''sydenstaert''' (''Bombycilla garrulus'') is en [[voegel|voagel]], dee binn
 
 [[Bestaand:Cedar Wax Wing.jpg|thumb|Kyk up de gealen un witten partyen an de vlünkenspitsen.]]
 
-Med syn 18–21 cm het de sydenstaert üm un by de grötde van en [[spraoje|sprey]] un is kompakt bouwd med en grouten kop. Licht wedderkennen kan eyn den sydenstaert an syn upvallen hårtop un de beigerosa klöör. Karakteristsk sint ouk de swarten plakkens üm de ougen un an dat kin, jüst so as dat swart-wit-geal-roude munster an de spitsen van vlünken un staert.<ref>L. Svensson (2017, andra reviderade upplagan). ''Fågelguiden – Europas och Medelhavsområdets fåglar i fält''. Bonnier Fakta</ref>
+Med syn 18–20 cm het de sydenstaert üm un by de grötde van en [[spraoje|sprey]] un is kompakt bouwd med en grouten kop. De spanwydde van de vlünken ligt twüsken 32 un 36 cm un weagen deit de sydenstaert twüsken 50 un 75 g.<ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref> Licht wedderkennen kan eyn den sydenstaert an syn upvallen hårtop un de beigerosa klöör. Karakteristsk sint ouk de swarten plakkens üm de ougen un an dat kin, jüst so as dat swart-wit-geal-roude munster an de spitsen van vlünken un staert.<ref>L. Svensson (2017, andra reviderade upplagan). ''Fågelguiden – Europas och Medelhavsområdets fåglar i fält''. Bonnier Fakta</ref>
 
 == Vorspreyding un leavensgebeed ==
 
