*Empty MediaWiki Message*

--- a/Sydenstaert.mw
+++ b/Sydenstaert.mw
@@ -13,7 +13,12 @@ Med syn 18–20 cm het de sydenstaert üm un by de grötde van en [[spraoje|spre
 Bröden deit disse voagelspecies in de noordensten deylen van Eurasien un noordwesten [[Noord-Amerika|Noordamerika]], wårvan de euraaske subspecies den weatenskopliken name ''B.g. '''garrulus''' '' drigt un de noordwestamerikaanske den name ''B.g. '''pallidiceps''' ''. De sydenstaert is en [[deyltrekker]], wat bedüüdt, dat de populatioon deylwyse wintertyds nå süden hen trekt, man deylwyse in dat bröödgebeed blivt. Dat trekkend hangt stark af van de togänglikheid nå wisse beiensoorten, sünderlik van den [[fluithout|kwitsenboum]], in de brööd- un trekgebeden.<ref>T. Solonen, A. Lehikoinen & E. Lammi (2010). ''Uudenmaan linnusto''. 
  Helsingin Seudun Lintutieteellinen Yhdistys – Helsingforstraktens Ornitologiska Förening Tringa ry/rf</ref> Ouk in dat [[Nedersaksisch|sassiske]] språkgebeed is de sydenstaert medto wintertyds as [[invasioonsgast|invasioons-]] or [[dwaalgast]] to bemöten.
 
-Vöärtrekkingswyse leavt de sydenstaert in nadelhölter, man ünder de trektyd höldt dee sik ouk in parks un ander minsklike ümgeaving up.<ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref> 
+Vöärtrekkingswyse leavt de sydenstaert in nadelhölter, man ünder de trektyd höldt dee sik ouk in parks, gaardens un ander minsklike ümgeaving up.<ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref> 
+
+== Leavenswyse ==
+
+As vödelse prefereert de sydenstaert beien, såd un rüggråtslouse deerten. <ref>[http://www.luontoportti.com/suomi/fi/linnut/tilhi LuontoPortti: Tilhi]</ref> Blangen kwitsen vrit hee ouk [[jeneverbees|machandelbeien]] un beien van gaardenstrüker. Dårby warkt syn leaver so effektiv, dat anskynlik ouk öäverrype beien em ni duun maket. <ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref> Dat sydenstaerten van öäverrype beien duun wardet, is wul en urbane legende. Weatenskoplik het sik dat betto noch ni bewysen låten un anseens dat syn leaver üm de 10% van syn lyv uutmaakt un hee alkohool neagen mål so gauw vorbrent as en minsk, is dat ouk ni al to wårskynlik.<ref>J. Korteniemi (2016). ''Syksyn taikaa: Humaltuvatko tilhet pihlajanmarjoista?'' [https://www.tiedetuubi.fi/syksyn-taikaa-humaltuvatko-tilhet-pihlajanmarjoista Tiedetuubi]</ref>
+
 
 ==Referensen==
 <references/>
