*Empty MediaWiki Message*

--- a/Sydenstaert.mw
+++ b/Sydenstaert.mw
@@ -1,6 +1,6 @@
 De '''sydenstaert''' (''Bombycilla garrulus'') is en [[voegel|voagel]], dee binnen de oordening ''Passeriformes'' de familen van de sydenstaerten (''Bombycillidae'') tohöyrt. 
 
-== Kenteykens ==
+== Markteykens ==
 
 [[Bestaand:Cedar Wax Wing.jpg|thumb|Kyk up de gealen un witten partyen an de vlünkenspitsen.]]
 
