--- a/Sydenstaert.mw
+++ b/Sydenstaert.mw
@@ -17,7 +17,7 @@ Vöärtrekkingswyse leavt de sydenstaert in nadelhölter, man ünder de trektyd 
 
 == Leavenswyse ==
 
-As vödelse prefereert de sydenstaert beien, såd un rüggråtslouse deerten. <ref>[http://www.luontoportti.com/suomi/fi/linnut/tilhi LuontoPortti: Tilhi]</ref> Wintertyds leavt hee vöäraal van beien un vrit do blangen kwitsen ouk [[jeneverbees|machandelbeien]] un beien van gaardenstrüker. Dårby warkt syn leaver so effektiv, dat anskynlik ouk öäverrype beien em ni duun maket. <ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref> Dat sydenstaerten van öäverrype beien duun wardet, is indedåd wul man en urbane legende. Weatenskoplik het sik dat betto noch ni bewysen låten un anseens dat syn leaver üm de 10% van syn lyv uutmaakt un hee alkohool neagen mål so gauw vorbrent as en minsk, is dat ouk ni al to wårskynlik.<ref>J. Korteniemi (2016). ''Syksyn taikaa: Humaltuvatko tilhet pihlajanmarjoista?'' [https://www.tiedetuubi.fi/syksyn-taikaa-humaltuvatko-tilhet-pihlajanmarjoista Tiedetuubi]</ref>
+As vödelse prefereert de sydenstaert beien, såd un rüggråtslouse deerten. <ref>[http://www.luontoportti.com/suomi/fi/linnut/tilhi LuontoPortti: Tilhi]</ref> Wintertyds leavt hee vöäral van beien un vrit do blangen kwitsen ouk [[jeneverbees|machandelbeien]] un beien van gaardenstrüker. Dårby warkt syn leaver so effektiv, dat anskynlik ouk öäverrype beien em ni duun maket. <ref>P. Koskimies (2019). ''Linnut – Lajiopas''. readme.fi</ref> Dat sydenstaerten van öäverrype beien duun wardet, is indedåd wul man en urbane legende. Weatenskoplik het sik dat betto noch ni bewysen låten un anseens dat syn leaver üm de 10% van syn lyv uutmaakt un hee alkohool neagen mål so gauw vorbrent as en minsk, is dat ouk ni al to wårskynlik.<ref>J. Korteniemi (2016). ''Syksyn taikaa: Humaltuvatko tilhet pihlajanmarjoista?'' [https://www.tiedetuubi.fi/syksyn-taikaa-humaltuvatko-tilhet-pihlajanmarjoista Tiedetuubi]</ref>
 
 === Voordplanting ===
 
