--- a/Deyltrekker.mw
+++ b/Deyltrekker.mw
@@ -2,7 +2,7 @@
 
 Wekke species sint regelhaftige deyltrekkers, man by ander trekt en deyl van de populatioon alleyn ünder wisse bedingen. Döär dat vorwarmend van dat klima un toneamen wintertydlik voderend proberet meddewyle meyr un meyr voagels ouk in Noordeuropa to öäverwinteren. Eksempelen dårvöär sint de [[gröönvink]] un de [[gietelink|swartdroossel]], dee döär van minsken geaven voder in jümmers grötter antal un jümmers wyder noorden in Finland vorsöket döär den winter to koamen.
 
-By veal deyltrekkers geldt de regel, wat speciel wyvens un junge voagels nå süden hen trekket, bydes vöäral de hekens to'n öäverwinterend blyvet. Vorklåren löt sik dat mang ander döärdat de hekens up disse manere in dat naegste jår al vrö paraat sint vöär dat sökend un vordeffenderend van ear territorium. By wekke [[röyvvoagels]] trekket alleyn de jungvoagels, ümdat se noch ni noog vorvaring hebbet üm ünder de harden winterbedingen noog vödelse to krygen.<ref>L. J. Laine (2017). ''Suomen linnut – harrastajan opas''. Otava</ref>
+By veal deyltrekkers geldt de regel, wat speciel wyvens un jungvoagels nå süden hen trekket, bydes vöäral de hekens to'n öäverwinterend blyvet. Vorklåren löt sik dat mang ander döärdat de hekens up disse manere in dat naegste jår al vrö paraat sint vöär dat sökend un vordeffenderend van ear territorium. By wekke [[röyvvoagels]] trekket alleyn de jungvoagels, ümdat se noch ni noog vorvaring hebbet üm ünder de harden winterbedingen noog vödelse to krygen.<ref>L. J. Laine (2017). ''Suomen linnut – harrastajan opas''. Otava</ref>
 
 ==Referensen==
 <references/>
