*Empty MediaWiki Message*

--- a/Deyltrekker.mw
+++ b/Deyltrekker.mw
@@ -1,6 +1,6 @@
-'''Deyltrekker''' is en vakbegreap uut de [[ornitology]] un beteykent en [[voegel|voagel]]species, wår en deyl van de populatioon harvst- or wintertyds nå süden hen trekt, bydes de ander deyl van de populatioon in de summergebeden blivt or man en kört stük weg trekt. Deyltrekkers skealet sik dårmed van reguläre trekvoagels, dee sik in langtrekkers un körttrekkers grupperen låtet. Sünderlik in [[Noord-Europa|Noordeuropa]] sint veal voagelaarden deyltrekkers. De andeyl van wegtrekkers un blyvers wesselt jårliks afhangig van de togänglikheid nå vödelse.
+'''Deyltrekker''' is en vakbegreap uut de [[ornitology]] un beteykent en [[voegel|voagel]]species, wår en deyl van de populatioon harvst- or wintertyds nå süden hen trekt, bydes de ander deyl van de populatioon in de [[summer]]gebeden blivt or man en kört stük weg trekt. Deyltrekkers skealet sik dårmed van reguläre trekvoagels, dee sik in langtrekkers un körttrekkers grupperen låtet. Sünderlik in [[Noord-Europa|Noordeuropa]] sint veal voagelaarden deyltrekkers. De andeyl van wegtrekkers un blyvers wesselt jårliks afhangig van de togänglikheid nå vödelse.
 
-Wekke species sint regelhaftige deyltrekkers, man by ander trekt en deyl van de populatioon alleyn ünder wisse bedingen. Döär dat vorwarmend van dat klima un toneamen wintertydlik voderend proberet meddewyle meyr un meyr voagels ouk in Noordeuropa to öäverwinteren. Eksempelen dårvöär sint de [[gröönvink]] un de [[gietelink|swartdroossel]], dee döär van minsken geaven voder in jümmers grötter antal un jümmers wyder noorden in Finland vorsöket döär den winter to koamen.
+Wekke species sint regelhaftige deyltrekkers, man by ander trekt en deyl van de populatioon alleyn ünder wisse bedingen. Döär dat vorwarmend van dat [[klimaat|klima]] un toneamen wintertydlik voderend proberet meddewyle meyr un meyr voagels ouk in Noordeuropa to öäverwinteren. Eksempelen dårvöär sint de [[gröönvink]] un de [[gietelink|swartdroossel]], dee döär van minsken geaven voder in jümmers grötter antal un jümmers wyder noorden in Finland vorsöket döär den winter to koamen.
 
 By veal deyltrekkers geldt de regel, wat speciel wyvens un jungvoagels nå süden hen trekket, bydes vöäral de hekens to'n öäverwinterend blyvet. Vorklåren löt sik dat mang ander döärdat de hekens up disse manere in dat naegste jår al vrö paraat sint vöär dat sökend un vordeffenderend van ear territorium. By wekke [[röyvvoagels]] trekket alleyn de jungvoagels, ümdat se noch ni noog vorvaring hebbet üm ünder de harden winterbedingen noog vödelse to krygen.<ref>L. J. Laine (2017). ''Suomen linnut – harrastajan opas''. Otava</ref>
 
