--- a/Deyltrekker.mw
+++ b/Deyltrekker.mw
@@ -1,4 +1,4 @@
-'''Deyltrekker''' is en vakbegreap uut de [[ornitology]] un beteykent en [[voegel|voagel]]species, wår en deyl van de populatioon harvst- or wintertyds nå süden hen trekt, bydes de ander deyl van de populatioon in de [[summer]]gebeden blivt or man en kört stük weg trekt. Deyltrekkers skealet sik dårmed van reguläre trekvoagels, dee sik in langtrekkers un körttrekkers grupperen låtet. Sünderlik in [[Noord-Europa|Noordeuropa]] sint veal voagelaarden deyltrekkers. De andeyl van wegtrekkers un blyvers wesselt jårliks afhangig van de togänglikheid nå vödelse.
+'''Deyltrekker''' is en vakbegreap uut de [[ornitology]] un beteykent en [[voegel|voagel]]species, wår en deyl van de populatioon harvst- or wintertyds nå süden hen trekt, bydes de ander deyl van de populatioon in de [[summer]]gebeden blivt or man en kört stük weg trekt. Deyltrekkers skealet sik dårmed van reguläre trekvoagels, dee sik in langtrekkers un körttrekkers grupperen låtet. Sünderlik [[Centraol-Europa|Medden-]] man ouk in [[Noord-Europa|Noordeuropa]] sint veal voagelaarden deyltrekkers. De andeyl van wegtrekkers un blyvers wesselt jårliks afhangig van de togänglikheid nå vödelse.
 
 Wekke species sint regelhaftige deyltrekkers, man by ander trekt en deyl van de populatioon alleyn ünder wisse bedingen. Döär dat vorwarmend van dat [[klimaat|klima]] un toneamen wintertydlik voderend proberet meddewyle meyr un meyr voagels ouk in Noordeuropa to öäverwinteren. Eksempelen dårvöär sint de [[gröönvink]] un de [[gietelink|swartdroossel]], dee döär van minsken geaven voder in jümmers grötter antal un jümmers wyder noorden in Finland vorsöket döär den winter to koamen.<ref>L. J. Laine (2017). ''Suomen linnut – harrastajan opas''. Otava</ref> Blangen swartdroosselen sint in Meddeneuropa mang ander noch [[gele gis|gealgööskens]] un [[roudbostens]] deyltrekkers.<ref>NABU. [https://www.nabu.de/tiere-und-pflanzen/voegel/vogelkunde/gut-zu-wissen/11787.html Amsel, Drossel, Fink und Star...]</ref>
 
